--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "barrage": "^2.0.4",
+    "barrage-ui": "^1.4.1",
+    "element-plus": "^2.1.3",
+    "sass": "^1.49.9",
     "vue": "^3.2.25"
   },
   "devDependencies": {
